--- a/arch/arm64/configs/rolex_defconfig
+++ b/arch/arm64/configs/rolex_defconfig
@@ -1,4 +1,4 @@
-CONFIG_LOCALVERSION="-Treble"
+CONFIG_LOCALVERSION="-Triton-v1.1"
 CONFIG_LOCALVERSION_AUTO=n
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_AUDIT=y
@@ -51,7 +51,6 @@ CONFIG_BLK_DEV_INITRD=y
 CONFIG_RD_BZIP2=y
 CONFIG_RD_LZMA=y
 CONFIG_CC_OPTIMIZE_FOR_SIZE=y
-CONFIG_KALLSYMS_ALL=y
 CONFIG_EMBEDDED=y
 # CONFIG_SLUB_DEBUG is not set
 CONFIG_PROFILING=y
@@ -157,7 +156,7 @@ CONFIG_NETFILTER_XT_TARGET_CONNMARK=y
 CONFIG_NETFILTER_XT_TARGET_CONNSECMARK=y
 CONFIG_NETFILTER_XT_TARGET_IDLETIMER=y
 CONFIG_NETFILTER_XT_TARGET_HARDIDLETIMER=y
-CONFIG_NETFILTER_XT_TARGET_LOG=y
+#CONFIG_NETFILTER_XT_TARGET_LOG=not set
 CONFIG_NETFILTER_XT_TARGET_MARK=y
 CONFIG_NETFILTER_XT_TARGET_NFLOG=y
 CONFIG_NETFILTER_XT_TARGET_NFQUEUE=y
@@ -570,7 +569,7 @@ CONFIG_MSM_ADSP_LOADER=y
 CONFIG_MSM_MEMORY_DUMP_V2=y
 CONFIG_MSM_BOOT_STATS=y
 CONFIG_MSM_CPUSS_DUMP=y
-CONFIG_MSM_COMMON_LOG=y
+#CONFIG_MSM_COMMON_LOG=not
 CONFIG_MSM_DDR_HEALTH=y
 CONFIG_MSM_WATCHDOG_V2=y
 CONFIG_MSM_FORCE_WDOG_BITE_ON_PANIC=y
@@ -632,7 +631,7 @@ CONFIG_CORESIGHT_REPLICATOR=n
 CONFIG_CORESIGHT_STM=n
 CONFIG_CORESIGHT_HWEVENT=n
 CONFIG_SENSORS_SSC=y
-CONFIG_MSM_TZ_LOG=y
+#CONFIG_MSM_TZ_LOG=not
 CONFIG_EXT2_FS=y
 CONFIG_EXT2_FS_XATTR=y
 CONFIG_EXT3_FS=y
@@ -649,8 +648,10 @@ CONFIG_VFAT_FS=y
 CONFIG_TMPFS=y
 CONFIG_TMPFS_POSIX_ACL=y
 CONFIG_PRINTK_TIME=y
-CONFIG_DEBUG_INFO=y
-CONFIG_MAGIC_SYSRQ=y
+CONFIG_TCP_CONG_ADVANCED=y
+CONFIG_TCP_CONG_WESTWOOD=y
+CONFIG_DEFAULT_WESTWOOD=y
+CONFIG_DEFAULT_TCP_CONG="westwood"
 CONFIG_PANIC_TIMEOUT=5
 CONFIG_PANIC_ON_RECURSIVE_FAULT=y
 # CONFIG_SCHED_DEBUG is not set
@@ -683,6 +684,8 @@ CONFIG_CRYPTO_AES_ARM64_CE_CCM=y
 CONFIG_CRYPTO_AES_ARM64_CE_BLK=y
 CONFIG_CRYPTO_AES_ARM64_NEON_BLK=y
 CONFIG_QMI_ENCDEC=y
+CONFIG_DEFAULT_DEADLINE=y
+CONFIG_DEFAULT_IOSCHED="deadline"
 CONFIG_BOEFFLA_WL_BLOCKER=y
 CONFIG_REGULATOR_TPS65132=y
 CONFIG_SERIAL_NUM=y
@@ -739,7 +742,7 @@ CONFIG_VGA_ARB=y
 CONFIG_VGA_ARB_MAX_GPUS=16
 CONFIG_MSM_KGSL=y
 # CONFIG_MSM_KGSL_CFF_DUMP is not set
-CONFIG_MSM_ADRENO_DEFAULT_GOVERNOR="msm-adreno-tz"
+CONFIG_MSM_ADRENO_DEFAULT_GOVERNOR="cpufreq"
 CONFIG_MSM_KGSL_IOMMU=y
 CONFIG_SYNC=y
 CONFIG_DEBUG_FS=y
