--- a/arch/arm64/configs/rolex_defconfig
+++ b/arch/arm64/configs/rolex_defconfig
@@ -2229,6 +2229,7 @@ CONFIG_POWER_SUPPLY=y
 # CONFIG_SMB135X_CHARGER is not set
 # CONFIG_SMB1360_CHARGER_FG is not set
 CONFIG_SMB358_CHARGER=y
+CONFIG_QUICK_CHARGE=y
 # CONFIG_SMB23X_CHARGER is not set
 # CONFIG_BATTERY_BQ28400 is not set
 # CONFIG_QPNP_CHARGER is not set
