--- a/.drone.yml
+++ b/.drone.yml
@@ -1,17 +1,16 @@
-version: 2.1
-jobs:
-  compile:
-    docker:
-      - image: thagoo/Triton:latest
-    steps:
-      - run: apt-get -y update && apt-get -y upgrade
-      - run: git clone https://github.com/Thagoo/Triton_kernel_xiaomi_msm8917 -b tr-10-caf triton
-      - run: wget https://raw.githubusercontent.com/Thagoo/scripts/master/rolex/drone
-      - run: chmod +x drone
-      - run: bash drone
+kind: pipeline
+name: triton
 
-workflows:
-  version: 2.1
-  cooking:
-    jobs:
-      - compile
+steps:
+  - name: Compile
+    image: ubuntu:latest
+    environment:
+    TOKEN:
+      from_secret: TOKEN
+    CID:
+      from_secret: CID
+    commands:
+      - apt-get update && apt-get install -y bison build-essential bc bison curl libssl-dev git zip wget 
+      - wget https://raw.githubusercontent.com/Thagoo/triton-script/tr/compiler.sh
+      - chmod +x compiler.sh
+      - bash compiler.sh
