--- a/arch/arm64/configs/rolex_defconfig
+++ b/arch/arm64/configs/rolex_defconfig
@@ -516,7 +516,6 @@ CONFIG_SUSPEND_TIME=y
 # CONFIG_SUSPEND_SKIP_SYNC is not set
 CONFIG_ARCH_SUSPEND_POSSIBLE=y
 CONFIG_ARM64_CPU_SUSPEND=y
-
 #
 # CPU Power Management
 #
@@ -2230,6 +2229,7 @@ CONFIG_POWER_SUPPLY=y
 # CONFIG_SMB1360_CHARGER_FG is not set
 CONFIG_SMB358_CHARGER=y
 CONFIG_QUICK_CHARGE=y
+CONFIG_QNS_SYSTEM=y
 # CONFIG_SMB23X_CHARGER is not set
 # CONFIG_BATTERY_BQ28400 is not set
 # CONFIG_QPNP_CHARGER is not set
