configs: Enable adreno idler and clean configs

--- a/arch/arm64/configs/rolex_defconfig
+++ b/arch/arm64/configs/rolex_defconfig
@@ -2,7 +2,7 @@
 # Automatically generated file; DO NOT EDIT.
 # Linux/arm64 3.18.140 Kernel Configuration
 #
-CONFIG_LOCALVERSION="Triton☄Atmosphere💨"
+CONFIG_LOCALVERSION="-Triton☄Atmosphere💨"
 CONFIG_ARM64=y
 CONFIG_64BIT=y
 CONFIG_ARCH_PHYS_ADDR_T_64BIT=y
@@ -44,10 +44,8 @@ CONFIG_BUILDTIME_EXTABLE_SORT=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
 # CONFIG_COMPILE_TEST is not set
-CONFIG_LOCALVERSION="-Triton-v1.1"
 # CONFIG_LOCALVERSION_AUTO is not set
-CONFIG_DEFAULT_HOSTNAME="(none)"
-CONFIG_SWAP=y
+CONFIG_DEFAULT_HOSTNAME=-Rolex-developement
 # CONFIG_SYSVIPC is not set
 # CONFIG_POSIX_MQUEUE is not set
 CONFIG_CROSS_MEMORY_ATTACH=y
@@ -2759,20 +2757,7 @@ CONFIG_MEDIA_TUNER_MC44S803=y
 #
 # CONFIG_DVB_DUMMY_FE is not set
 
-#
-# Graphics support
-#
-CONFIG_VGA_ARB=y
-CONFIG_VGA_ARB_MAX_GPUS=16
-CONFIG_MSM_KGSL=y
-# CONFIG_MSM_KGSL_CFF_DUMP is not set
-CONFIG_MSM_ADRENO_DEFAULT_GOVERNOR="cpu-freq"
-CONFIG_MSM_KGSL_IOMMU=y
-
-#
-# Direct Rendering Manager
-#
-# CONFIG_DRM is not set
+CONFIG_DRM=y
 
 #
 # Frame buffer Devices
@@ -3938,7 +3923,6 @@ CONFIG_MSM_KERNEL_PROTECT_MPU=y
 # CONFIG_QCOM_EARLY_RANDOM is not set
 # CONFIG_MSM_BG_GLINK is not set
 # CONFIG_WCD_DSP_GLINK is not set
-CONFIG_CPUMAXFREQ=y
 CONFIG_SERIAL_NUM=y
 CONFIG_SECBOOT_FUSE=y
 CONFIG_MEM_SHARE_QMI_SERVICE=y
@@ -4629,18 +4613,14 @@ CONFIG_NET_NS=y
 CONFIG_VETH=y
 ## END
 CONFIG_DISABLE_TEMP_PROTECT=n
-
 CONFIG_MSM_RTB=y
 CONFIG_MSM_RTB_SEPARATE_CPUS=y
-
-CONFIG_ZRAM_DEBUG=y
 CONFIG_SWAP=y
 CONFIG_MEMCG=y
 CONFIG_MEMCG_SWAP=y
 CONFIG_ANDROID_WHETSTONE=y
 CONFIG_CGROUP_MEM_RES_CTLR=y
 CONFIG_CGROUP_MEM_RES_CTLR_SWAP=y
-
 CONFIG_DUMP_ALL_STACKS=y
 # CONFIG_FIRE_WATCHDOG is not set
 
